[package]
name = "counter_router"
version = "0.1.0"
authors = ["Garrett Berg <vitiral@gmail.com>"]

[dependencies]
stdweb = "0.4.2"
yew = {version="0.3.*", git="https://github.com/DenisKolodin/yew"}
yew_route = { git="https://github.com/vitiral/yew_route" }

[replace]
"yew:0.3.0" = {git="https://github.com/DenisKolodin/yew"}
